# video_cut_skill

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FUTURE.md  LICENSE  Makefile  README.md  ROADMAP.md  SKILL.md  TOOLS.md  config.example.yaml  coverage.xml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CODE_REVIEW_REPORT.md  INTEGRATION.md  TEST_REPORT.md  cloud_service_plan.md  configuration.md  index.md  installation.md  models.md  p0-features-guide.md  quickstart.md  testing-guide.md  troubleshooting.md
docs/adr/: 001-tiered-transcription.md  002-auto-editor-unification.md  README.md
docs/api/: index.md
docs/architecture/: project-plan.md
docs/development/: contributing.md  phase1-log.md  phase2-log.md
docs/research/: feature-brainstorm.md  github-research.md
docs/testing/: test9-summary.md
examples/: basic_workflow.py
scripts/: download_models.py  feishu_file_downloader.py  test_aliyun_api.py  upload_server.py
src/video_cut_skill/: __init__.py  auto_editor.py  auto_editor_enhanced.py  beat_detection.py  config.py  exceptions.py  processing_service.py  smart_layout.py  speaker_recognition.py  template_engine.py
src/video_cut_skill/ai/: __init__.py  analyzer.py  scene_detector.py  strategy.py  transcriber.py
src/video_cut_skill/audio/: __init__.py
src/video_cut_skill/clients/: __init__.py  aliyun_client.py
src/video_cut_skill/core/: __init__.py  cache.py  checkpoint_manager.py  cost_guardian.py  ffmpeg_wrapper.py  file_upload.py  interactive_editor.py  metrics_collector.py  models.py  session_manager.py  smart_transcriber.py  task_queue.py
src/video_cut_skill/models/: __init__.py  agent.py  semantic.py  session.py
src/video_cut_skill/motion_graphics/: __init__.py  renderer.py
src/video_cut_skill/motion_graphics/animations/: __init__.py  easing.py
src/video_cut_skill/motion_graphics/elements/: __init__.py  shape.py  text.py
src/video_cut_skill/utils/: __init__.py  cache.py  hardware.py  logging.py  retry.py
tests/: conftest.py  test_interactive_editing.py
tests/integration/: test9.py  test_phase1.py  test_phase2.py  test_smart_transcribe.py  test_whisper_base.py
tests/unit/: test_analyzer.py  test_audio.py  test_auto_editor.py  test_beat_detection.py  test_cache.py  test_cache_utils.py  test_checkpoint_manager.py  test_easing.py  test_ffmpeg_pip.py  test_ffmpeg_wrapper.py  test_hardware.py  test_interactive_editor.py  test_logging.py  test_metrics_collector.py  test_models.py  test_renderer.py  test_retry.py  test_scene_detector.py  test_shape.py  test_speaker_recognition.py  test_strategy.py  test_task_queue.py  test_template_engine.py  test_transcriber.py
