[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-cut-skill"
version = "0.4.0"
description = "Intelligent video editing skill for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Zhaofan Qiu", email = "your.email@example.com" },
]
keywords = ["video", "editing", "ai", "automation", "ffmpeg", "whisper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "tqdm>=4.65.0",
    
    # Video processing
    "ffmpeg-python>=0.2.0",
    "opencv-python>=4.8.0",
    
    # Audio processing
    "openai-whisper>=20231117",
    "pydub>=0.25.1",
    "librosa>=0.10.0",
    
    # Scene detection
    "scenedetect[opencv]>=0.6.2",
    
    # ML (optional, for advanced features)
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    
    # Code quality
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.23.0",
    
    # Development tools
    "pre-commit>=3.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

gpu = [
    "torch[cuda]>=2.0.0",
]

[project.scripts]
video-cut = "video_cut_skill.cli:main"

[project.urls]
Homepage = "https://github.com/ZhaofanQiu/video_cut_skill"
Documentation = "https://zhaofanqiu.github.io/video_cut_skill"
Repository = "https://github.com/ZhaofanQiu/video_cut_skill.git"
Issues = "https://github.com/ZhaofanQiu/video_cut_skill/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/video_cut_skill"]

[tool.black]
line-length = 150
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 150
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "UP006", # Use list instead of List for type annotation
    "UP035", # typing.List is deprecated
    "SIM103", # Return the negated condition directly
    "SIM108", # Use ternary operator
    "E501",  # Line too long
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
show_error_codes = true
ignore_missing_imports = true
warn_no_return = false
exclude = ["venv", ".venv", "env", ".env"]

[[tool.mypy.overrides]]
module = [
    "whisper.*",
    "scenedetect.*",
    "ffmpeg.*",
    "cv2.*",
    "librosa.*",
    "pydub.*",
    "torch.*",
    "torch",
]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=video_cut_skill",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]

[tool.coverage.run]
source = ["src/video_cut_skill"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
